# plotLP

./: README.md  pyproject.toml
.ai/: structure.md
.opencode/instructions/: docstrings.md  structure.md
docs/handwritten/: library_basics.rst  license.rst  simple_example.rst
docs/source/: StyledAxes.rst  StyledFigure.rst  beginner_guide.rst  cmap.rst  color.rst  concepts.rst  conf.py  features.rst  figure.rst  gridsubplots.rst  imgfigure.rst  index.rst  install.rst  make_animation.rst  modules.rst  plt.rst  quicky.rst  reference_guide.rst  routines.rst  scripts.rst  style.rst  subplots.rst  tutorials.rst  user_guide.rst  what_is.rst
src/plotlp/: __init__.py
src/plotlp/modules/StyledAxes_LP/: StyledAxes.py
src/plotlp/modules/StyledAxes_LP/_functions/: scalebar.py
src/plotlp/modules/StyledFigure_LP/: StyledFigure.py
src/plotlp/modules/cmap_LP/: cmap.py
src/plotlp/modules/color_LP/: color.py
src/plotlp/modules/gridsubplots_LP/: gridsubplots.py  test_gridsubplots.py
src/plotlp/modules/make_animation_LP/: make_animation.py  test_make_animation.py
src/plotlp/modules/style_LP/: style.py
src/plotlp/modules/subplots_LP/: subplots.py  test_subplots.py
